reorganized integration tests for separate 'plugins' test dir

--- a/test/assets/integration/equivalence/capture/with-include.tpl.twig
+++ b/test/assets/integration/equivalence/capture/with-include.tpl.twig
@@ -1,6 +1,6 @@
 [
     {% set content %}
-        {% include "include/_include.tpl" %}
+        {% include "equivalence/include/_include.tpl" %}
     {% endset %}
 ]
 
